...
                                startPoint: .topLeading,
                                endPoint: .bottomTrailing
                            )
                        )
                    
                    VStack(alignment: .leading, spacing: 2) {
                        Text("Notlarımız")
                            .font(.title3)
                            .fontWeight(.bold)
                        
                        Text("Paylaşımlı not defterimiz")
                            .font(.caption)
                            .foregroundColor(.secondary)
...
